Make /update_password endpoint vulnerable to BOLA.
